--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 **/*.exe
 *.o
+Lista 01 - (Revisão de APC)/testando matrizes com ponteiros.c
+Lista 01 - (Revisão de APC)/so vai pelo amor de deus.c
+.vscode/tasks.json
